added and improved whole app level logging.